@@ -26,6 +26,7 @@
 18. Change window-drag options to allow dragging via toolbars and other empty areas.
 19. Add option to draw separator between titlebar and window contents.
 20. Make combo-boxes slightly thinner.
+21. Update kwin shadow code.
 
 1.4.3
 -----
